Fix logo visibility and mobile responsiveness

--- a/css/international college academy.css
+++ b/css/international college academy.css
@@ -298,8 +298,8 @@ a{
   display: block;
   border: 1px solid goldenrod;
   border-radius: 10px;
-  margin-top: -265%;
-  margin-left: 102px;
+  margin-top: -295%;
+  margin-left: 97px;
   position: relative;
   z-index: 99;
 }
